# mapineqpy

./: .gitignore  README.md  README.qmd  genindex.html  index.html  manual-test.py  mapineqpy.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: sphinx_docs_to_gh_pages.yaml
_sources/: modules.rst.txt
docs/source/: conf.py  index.rst  mapineqpy.rst
src/mapineqpy/: __init__.py  config.py  data.py  levels.py  options.py  source_filters.py  sources.py
