# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mapineqpy"
version = "0.0.1"
authors = [
  { name="Egor Kotov", email="kotov.egor@gmail.com" },
]
description = "Python client for accessing Mapineq inequality indicators via API."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests",
    "pandas",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "myst-parser",
    "recommonmark",
    "sphinx-autodoc-typehints"
]

[project.urls]
homepage = "https://github.com/e-kotov/mapineqpy"
source = "https://github.com/e-kotov/mapineqpy"
issues = "https://github.com/e-kotov/mapineqpy/issues"
changelog = "https://github.com/e-kotov/mapineqpy/blob/main/CHANGELOG.md"

[tool.hatch.build]
exclude = [
  "**/.*",
  "docs",
  "tests",
  "examples"
]

[tool.hatch.build.targets.wheel]
only-include = ["src/mapineqpy"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
mapineqpy = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
mapineqpy = "*"
build = "*"
